Fix: Dodati zatvarajuci tagovi za predmete u II, III i IV razredu za profile Ginekolosko-akuserska, Medicinska sestra-vaspitac i Negovatelj

--- a/obrazovni-profili.html
+++ b/obrazovni-profili.html
@@ -219,6 +219,8 @@
                                         <div class="subject-item">7. Основе неонатологије</div>
                                         <div class="subject-item">8. Прва помоћ</div>
                                         <div class="subject-item">9. Практикум (кабинетске вежбе)</div>
+                                    </div>
+                                </div>
 
                                 <div class="tab-panel" id="year2-gin">
                                     <div class="subjects-grid">
@@ -328,6 +330,8 @@
                                         <div class="subject-item">7. Комуникација са родитељима</div>
                                         <div class="subject-item">8. Прва помоћ</div>
                                         <div class="subject-item">9. Практикум</div>
+                                    </div>
+                                </div>
 
                                 <div class="tab-panel" id="year2-vasp">
                                     <div class="subjects-grid">
@@ -434,6 +438,8 @@
                                         <div class="subject-item">5. Здравствено-васпитни рад</div>
                                         <div class="subject-item">6. Прва помоћ</div>
                                         <div class="subject-item">7. Практикум</div>
+                                    </div>
+                                </div>
 
                                 <div class="tab-panel" id="year2-neg">
                                     <div class="subjects-grid">
