Update: Zamenjeni svi logo reference sa .jpg na .png verziju sa transparentnom pozadinom

--- a/o-nama.html
+++ b/o-nama.html
@@ -27,7 +27,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="index.html" aria-label="Почетна страна - Медицинска школа Стевица Јовановић">
-                    <img src="images/images_preview_rev_1.jpg" alt="Медицинска школа — лого" class="logo-img">
+                    <img src="images/images_preview_rev_1.png" alt="Медицинска школа — лого" class="logo-img">
                 </a>
             </div>
             <ul class="nav-menu" id="nav-menu" role="menubar">
