--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                     <a href="o-nama.html" class="nav-link" aria-haspopup="true" aria-expanded="false">О школи <i class="fas fa-chevron-down" aria-hidden="true"></i></a>
                     <ul class="dropdown-menu" role="menu" aria-label="О школи подмени">
                         <li role="menuitem"><a href="o-nama.html"><i class="fas fa-school" aria-hidden="true"></i> О нама</a></li>
-                        <li role="menuitem"><a href="arhiva.html"><i class="fas fa-history" aria-hidden="true"></i> Архива и историја</a></li>
                         <li role="menuitem"><a href="zaposleni.html"><i class="fas fa-users" aria-hidden="true"></i> Запослени</a></li>
                         <li role="menuitem"><a href="dokumentacija.html"><i class="fas fa-file-alt" aria-hidden="true"></i> Документација</a></li>
                         <li role="menuitem"><a href="strucni-timovi.html"><i class="fas fa-user-friends" aria-hidden="true"></i> Стручни тимови</a></li>
@@ -36,6 +35,7 @@
                 <li role="menuitem"><a href="maturska-pitanja.html" class="nav-link">Матурска питања</a></li>
                 <li role="menuitem"><a href="ucenici-i-roditelji.html" class="nav-link">Ученици и родитељи</a></li>
                 <li role="menuitem"><a href="galerija.html" class="nav-link">Галерија</a></li>
+                <li role="menuitem"><a href="arhiva.html" class="nav-link">Архива</a></li>
                 <li role="menuitem"><a href="erasmus-projekti.html" class="nav-link">Еразмус+ пројекти</a></li>
                 <li role="menuitem"><a href="kontakt.html" class="nav-link contact-btn">Контакт</a></li>
             </ul>
