Fix: 404 страница прилагођена брендингу (плаве боје), побољшан spacing у hero секцији на мобилном

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
             position: relative;
             overflow: hidden;
             padding: 20px;
@@ -203,7 +203,7 @@
         
         .btn-primary {
             background: white;
-            color: #667eea;
+            color: #1e3c72;
         }
         
         .btn-primary:hover {
@@ -256,7 +256,7 @@
             right: 8px;
             top: 50%;
             transform: translateY(-50%);
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
             color: white;
             border: none;
             width: 45px;
