Footer: Копиран комплетан footer са index.html на uslovi-koristenja.html

--- a/uslovi-koristenja.html
+++ b/uslovi-koristenja.html
@@ -264,45 +264,77 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-grid">
-                <div class="footer-section">
-                    <h3>Медицинска школа „Стевица Јовановић"</h3>
-                    <p>Модерна, савремена школа која комбинује теоријско знање са практичним искуством.</p>
-                    <div class="social-links">
-                        <a href="https://www.facebook.com/medicinskapv" target="_blank" rel="noopener" aria-label="Фејсбук"><i class="fab fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/medicinska_skolapancevo" target="_blank" rel="noopener" aria-label="Инстаграм"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.youtube.com/@MedicinskaShkola" target="_blank" rel="noopener" aria-label="Јутјуб"><i class="fab fa-youtube"></i></a>
+    <footer class="footer" role="contentinfo">
+        <div class="footer-main">
+            <div class="footer-content">
+                <div class="footer-column footer-brand">
+                    <div class="footer-logo-stack">
+                        <img src="images/Untitled_preview_rev_1.png" alt="Медицинска школа — лого" class="footer-logo-img">
+                        <span class="footer-badge"><i class="fas fa-star" aria-hidden="true"></i> 58 година традиције</span>
+                    </div>
+                    <p class="footer-description">Средња стручна школа са савременим програмима и нагласком на практичној настави у водећим здравственим установама. Подржавамо сваког ученика кроз менторство, пројекте и реалне стручне ситуације.</p>
+                </div>
+
+                <div class="footer-column">
+                    <h4>Брзе везе</h4>
+                    <ul class="footer-links">
+                        <li><a href="o-nama.html"><span>О школи</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                        <li><a href="obrazovni-profili.html"><span>Образовни профили</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                        <li><a href="maturska-pitanja.html"><span>Матурска питања</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                        <li><a href="ucenici-i-roditelji.html"><span>Ученици и родитељи</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                        <li><a href="galerija.html"><span>Галерија</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                        <li><a href="erasmus-projekti.html"><span>Erasmus+ пројекти</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                        <li><a href="kontakt.html"><span>Контакт</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-column">
+                    <h4>Документа</h4>
+                    <ul class="footer-links">
+                        <li><a href="dokumentacija.html"><span>Документација</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                        <li><a href="javne-nabavke.html"><span>Јавне набавке</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                        <li><a href="arhiva.html"><span>Архива</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                        <li><a href="sekcije.html"><span>Секције и тимови</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                        <li><a href="politika-privatnosti.html"><span>Политика приватности</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                        <li><a href="kontakt.html#lokacija"><span>Како до нас</span><i class="fas fa-arrow-up-right-from-square" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-column">
+                    <h4>Останимо у контакту</h4>
+                    <p class="footer-small-text">Пратимо успехе наших ученика и делимо вести из здравствене праксе. Придружите нам се на друштвеним мрежама и пишите нам уколико су вам потребне додатне информације.</p>
+                    <div class="footer-socials social-links">
+                        <a href="#" class="social-link facebook" aria-label="Facebook"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
+                        <a href="#" class="social-link instagram" aria-label="Instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                        <a href="#" class="social-link linkedin" aria-label="LinkedIn"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
+                        <a href="#" class="social-link tiktok" aria-label="TikTok"><i class="fab fa-tiktok" aria-hidden="true"></i></a>
+                    </div>
+                    <div class="footer-newsletter">
+                        <a class="footer-btn footer-btn--light" href="mailto:info@medicinskapancevo.edu.rs">
+                            <span>Пошаљи нам питање</span>
+                            <i class="fas fa-paper-plane" aria-hidden="true"></i>
+                        </a>
+                        <span class="footer-form-hint">Одговарамо у року од 24 часа.</span>
                     </div>
                 </div>
-
-                <div class="footer-section">
-                    <h3>Брзе везе</h3>
-                    <ul class="footer-links">
-                        <li><a href="o-nama.html">О нама</a></li>
-                        <li><a href="obrazovni-profili.html">Образовни профили</a></li>
-                        <li><a href="ucenici-i-roditelji.html">Ученици и родитељи</a></li>
-                        <li><a href="kontakt.html">Контакт</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-section">
-                    <h3>Контакт</h3>
-                    <ul class="footer-contact">
-                        <li><i class="fas fa-map-marker-alt"></i> Војводе Радомира Путника 8, Панчево</li>
-                        <li><i class="fas fa-phone"></i> 013/344-201</li>
-                        <li><i class="fas fa-envelope"></i> medicinska@skolapancevo.edu.rs</li>
-                    </ul>
-                </div>
             </div>
+        </div>
 
-            <div class="footer-bottom">
-                <p>&copy; 2024 Медицинска школа „Стевица Јовановић" Панчево. Сва права задржана.</p>
-                <div class="footer-legal">
+        <div class="footer-divider"></div>
+
+        <div class="footer-bottom">
+            <div class="footer-bottom-content">
+                <p class="footer-bottom-copy">&copy; <span id="current-year"></span> Медицинска школа „Стевица Јовановић" Панчево. Сва права задржана.</p>
+                <div class="developer-credit">
+                    <span>Израда и одржавање</span>
+                    <img src="images/pansoft-logo.png" alt="Pansoft">
+                </div>
+                <div class="footer-bottom-links">
                     <a href="politika-privatnosti.html">Политика приватности</a>
                     <span>•</span>
                     <a href="uslovi-koristenja.html">Услови коришћења</a>
+                    <span>•</span>
+                    <a href="#">Sitemap</a>
                 </div>
             </div>
         </div>
