--- a/index.html
+++ b/index.html
@@ -656,9 +656,9 @@
                 <div class="footer-bottom-links">
                     <a href="politika-privatnosti.html">Политика приватности</a>
                     <span>•</span>
-                    <a href="#">Услови коришћења</a>
+                    <a href="uslovi-koristenja.html">Услови коришћења</a>
                     <span>•</span>
-                    <a href="#">Sitemap</a>
+                    <a href="sitemap.html">Мапа сајта</a>
                 </div>
             </div>
         </div>
