Fix: Исправљено руководство школе на o-nama.html, дорађен footer на sitemap.html и uslovi-koristenja.html, усклађен header на sitemap.html

--- a/o-nama.html
+++ b/o-nama.html
@@ -228,7 +228,7 @@
                             </div>
                         </div>
                         <div class="member-info">
-                            <h3 class="member-name">Јелена Петровић</h3>
+                            <h3 class="member-name">Калапиш Светлана</h3>
                             <p class="member-position">Директор школе</p>
                             <p class="member-bio">
                                 Више од 20 година у образовању; фокус на квалитету наставе и развоју ученика.
@@ -244,10 +244,10 @@
                             </div>
                         </div>
                         <div class="member-info">
-                            <h3 class="member-name">Милан Јованов</h3>
-                            <p class="member-position">Помоћник директора</p>
+                            <h3 class="member-name">Рошу Марко</h3>
+                            <p class="member-position">Секретар</p>
                             <p class="member-bio">
-                                Зadužen за наставу и сарадњу са установама здравствене заштите.
+                                Zadužen за административне послове и документацију школе.
                             </p>
                         </div>
                     </div>
@@ -260,26 +260,10 @@
                             </div>
                         </div>
                         <div class="member-info">
-                            <h3 class="member-name">Марко Ивић</h3>
-                            <p class="member-position">Педагог</p>
+                            <h3 class="member-name">Лупшић Милан</h3>
+                            <p class="member-position">Организатор наставе</p>
                             <p class="member-bio">
-                                Ради саветодавни рад са ученицима и родитељима, прати напредак и мотивацију.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="team-member">
-                        <div class="member-photo" aria-hidden="true">
-                            <div class="member-icon female">
-                                <i class="fas fa-user-circle"></i>
-                                <div class="hover-overlay"></div>
-                            </div>
-                        </div>
-                        <div class="member-info">
-                            <h3 class="member-name">Снежана Павлов</h3>
-                            <p class="member-position">Психолог</p>
-                            <p class="member-bio">
-                                Пружа психолошку подршку и спроводи програме развоја социјалних вештина.
+                                Координира наставне активности и сарадњу са здравственим установама.
                             </p>
                         </div>
                     </div>
