--- a/uslovi-koristenja.html
+++ b/uslovi-koristenja.html
@@ -334,7 +334,7 @@
                     <span>•</span>
                     <a href="uslovi-koristenja.html">Услови коришћења</a>
                     <span>•</span>
-                    <a href="#">Sitemap</a>
+                    <a href="sitemap.html">Мапа сајта</a>
                 </div>
             </div>
         </div>
