Fix: Усклађен footer текст на sitemap.html са index.html

--- a/sitemap.html
+++ b/sitemap.html
@@ -398,7 +398,7 @@
                         <img src="images/Untitled_preview_rev_1.png" alt="Медицинска школа — лого" class="footer-logo-img">
                         <span class="footer-badge"><i class="fas fa-star" aria-hidden="true"></i> 58 година традиције</span>
                     </div>
-                    <p class="footer-description">Средња стручна школа са савременим програмима и нагласком на практичној настави у водећим здравственим установама.</p>
+                    <p class="footer-description">Средња стручна школа са савременим програмима и нагласком на практичној настави у водећим здравственим установама. Подржавамо сваког ученика кроз менторство, пројекте и реалне стручне ситуације.</p>
                 </div>
 
                 <div class="footer-column">
