Fix: Додати Back to Top button, WCAG Badge и Language Switcher на uslovi-koristenja.html и sitemap.html

--- a/sitemap.html
+++ b/sitemap.html
@@ -466,6 +466,29 @@
         </div>
     </footer>
 
+    <!-- Back to Top Button -->
+    <button class="back-to-top" id="back-to-top" title="Назад на врх" aria-label="Скролуј на врх стране">
+        <i class="fas fa-chevron-up" aria-hidden="true"></i>
+    </button>
+
+    <!-- WCAG Badge -->
+    <div class="wcag-badge" role="img" aria-label="Сајт је прилагођен WCAG 2.1 стандардима приступачности">
+        <div class="wcag-icon">
+            <i class="fas fa-universal-access" aria-hidden="true"></i>
+        </div>
+        <div class="wcag-tooltip" role="tooltip">
+            <strong>WCAG 2.1</strong>
+            <span>Приступачан садржај</span>
+        </div>
+    </div>
+
+    <!-- Language Switcher -->
+    <div class="language-switcher" id="language-switcher" aria-label="Промена језика">
+        <button class="lang-btn active" data-lang="sr" aria-pressed="true">СР</button>
+        <button class="lang-btn" data-lang="en" aria-pressed="false">EN</button>
+        <button class="lang-btn" data-lang="de" aria-pressed="false">DE</button>
+    </div>
+
     <!-- WCAG Toolbar -->
     <div class="wcag-toolbar">
         <button class="wcag-button" id="wcag-toggle" title="Опције приступачности" aria-label="Опције приступачности">
