Fix: Додат page-ending на uslovi-koristenja.html | New: Креирана moderna arhiva-new.html страница са филтерима, статистиком, картицама, пагинацијом - само дизајн (без функционалности)

--- a/uslovi-koristenja.html
+++ b/uslovi-koristenja.html
@@ -263,6 +263,12 @@
         </div>
     </main>
 
+    <!-- Page Ending -->
+    <div class="page-ending">
+        <div class="ending-divider"></div>
+        <p class="ending-text">Медицинска школа „Стевица Јовановић" Панчево</p>
+    </div>
+
     <!-- Footer -->
     <footer class="footer" role="contentinfo">
         <div class="footer-main">
