Fix: Премештен i18n.js на крај body-а за правилно учитавање | Додата i18n-test.html за тестирање превода

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="wcag-elements.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <script src="i18n.js"></script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -807,6 +806,10 @@
             }
         });
     </script>
+    
+    <!-- i18n Internationalization -->
+    <script src="i18n.js"></script>
+    
     <!-- Савет: проверите у DevTools -> Network -> Headers да server враћа Content-Type: text/html; charset=UTF-8 -->
 </body>
 </html>
