--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Медицинска школа „Стевица Јовановић” Панчево</title>
 
-    <link rel="preload" href="style.css" as="style">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="wcag-elements.css">
+    <link rel="preload" href="style.css?v=2" as="style">
+    <link rel="stylesheet" href="style.css?v=2">
+    <link rel="stylesheet" href="wcag-elements.css?v=2">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
